RESOLVED FIXED299594
Non-unified build fix in 32bit compilation after 299647@main
https://bugs.webkit.org/show_bug.cgi?id=299594
Summary Non-unified build fix in 32bit compilation after 299647@main
Alejandro G. Castro
Reported 2025-09-26 02:40:31 PDT
32bit compilation fails in this file because it lacks mutex include.
Attachments
Alejandro G. Castro
Comment 1 2025-09-26 02:46:17 PDT
EWS
Comment 2 2025-09-26 04:18:43 PDT
Committed 300570@main (5de8a161501a): <https://commits.webkit.org/300570@main> Reviewed commits have been landed. Closing PR #51378 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-26 04:19:12 PDT
Note You need to log in before you can comment on or make changes to this bug.