Non-unified build fix in 32bit compilation after 299647@main https://bugs.webkit.org/show_bug.cgi?id=299594

Reviewed by Fujii Hironori.

Added mutex include in the file.

* Source/WTF/wtf/glib/GResources.cpp:

Canonical link: https://commits.webkit.org/300570@main